--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,6 @@ img {
   align-items: center;
   height: 120px;
   margin-bottom: 30px;
-  padding: 25px;
   background: var(--tertiary-bg-color);
   border-radius: 4px;
 }
@@ -338,14 +337,18 @@ img {
 }
 
 .client {
+  height: 92px;
   width: calc((100% - 150px) / 6);
 }
 .client-link {
-  display: block;
-  padding: 16px 32px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   border: 1px solid var(--icon-color);
   border-radius: 4px;
-
   color: var(--icon-color);
 }
 
